[package]
name = "mm-web-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 2

[features]
default = ["server"]
server = ["lazy_static", "actix-web"]

[dependencies]
lazy_static = { version = "1.4", optional = true }
metamath-knife = { path = "../metamath-knife" }
actix-web = { version = "3.3", optional = true }
itertools = "0.10"
